src/test/deca/syntax/invalid/lex_floathex_min1_invalid.deca
// test borne inferieur
// invalid
0x1.0p-128


